--- a/om_hospital/views/patinet_view.xml
+++ b/om_hospital/views/patinet_view.xml
@@ -5,8 +5,19 @@
         <field name="name">Patients</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">hospital.patient</field>
-        <field name="context">{}</field>
         <field name="view_mode">tree,form</field>
+        <field name="context">{}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your first patient ! 
+            </p>
+        </field>    
     </record>
+
+    <menuitem id="menu_patient"
+        name="Patient"
+        action="action_hospital_patient"
+        parent="menu_patient_master"
+        sequence="0"/> 
 
 </odoo>
