[MV2-176] Define Search View

--- a/om_hospital/views/patinet_view.xml
+++ b/om_hospital/views/patinet_view.xml
@@ -7,11 +7,12 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name" string="Patient Name"/>
+                <field name="ref"/>
                 <field name="age"/>
                 <field name="gender"/>
             </tree>
         </field>
-    </record>        
+    </record>         
 
     <record id="view_hospital_patient_form" model="ir.ui.view">
         <field name="name">hospital.patient.form</field>
@@ -25,6 +26,7 @@
                             <field name="age"/>
                         </group>
                         <group>
+                            <field name="ref"/>
                             <field name="gender"/>
                         </group>
                     </group>
@@ -32,6 +34,19 @@
             </form>
         </field>    
     </record>
+
+    <record id="view_hospital_patient_search" model="ir.ui.view">
+        <field name="name">hospital.patient.search</field>
+        <field name="model">hospital.patient</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name" string="Patient Name" filter_domain="['|',('name', 'ilike', self),('ref', 'ilike', self)]"/>
+                <field name="ref"/>
+                <field name="age"/>
+                <field name="gender"/>
+            </search>
+        </field>
+    </record>   
 
     <record id="action_hospital_patient" model="ir.actions.act_window">
         <field name="name">Patients</field>
