--- a/om_hospital/views/patinet_view.xml
+++ b/om_hospital/views/patinet_view.xml
@@ -44,6 +44,13 @@
                 <field name="ref"/>
                 <field name="age"/>
                 <field name="gender"/>
+                <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]"/>
+                <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
+                <separator />
+                <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', 5)]"/>
+                <group expand="0" string="Group by">
+                    <filter string="Gender" name="group_by_gender" context="{'group_by': 'gender'}"/>
+                </group>
             </search>
         </field>
     </record>   
