[MV2-178] Add Archive And Unarchive Options

--- a/om_hospital/views/patinet_view.xml
+++ b/om_hospital/views/patinet_view.xml
@@ -28,6 +28,7 @@
                         <group>
                             <field name="ref"/>
                             <field name="gender"/>
+                            <field name="active" invisible="1"/>
                         </group>
                     </group>
                 </sheet>
@@ -47,7 +48,9 @@
                 <filter name="filter_male" string="Male" domain="[('gender', '=', 'male')]"/>
                 <filter name="filter_female" string="Female" domain="[('gender', '=', 'female')]"/>
                 <separator />
-                <filter name="filter_kids" string="Kids" domain="[('age', '&lt;=', 5)]"/>
+                <filter name="filter_kids" string="Kids" domain="[('active', '=', False)]"/>
+                <separator/>
+                <filter name="filter_archived" string="Archived" domain="[('gender', '=', 'female')]"/>
                 <group expand="0" string="Group by">
                     <filter string="Gender" name="group_by_gender" context="{'group_by': 'gender'}"/>
                 </group>
