--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -6,6 +6,9 @@
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
             <tree>
+                <field name="patient_id"/>
+                <field name="appointment_time"/>
+                <field name="booking_date"/>
             </tree>
         </field>
     </record>
@@ -18,6 +21,8 @@
                 <sheet>
                     <group>
                         <field name="patient_id"/>
+                        <field name="appointment_time"/>
+                        <field name="booking_date"/>
                     </group>
                 </sheet>
                 <div class="oe_chatter">
@@ -37,7 +42,7 @@
     </record>
 
      <menuitem id="menu_appointment"
-              name="Appointment"
+              name="Appointments"
               action="action_hospital_appointment"
               parent="menu_hospital_root"
               sequence="10"/>
