--- a/om_hospital/views/menu.xml
+++ b/om_hospital/views/menu.xml
@@ -10,5 +10,10 @@
         name="Patient Details"
         parent="menu_hospital_root"
         sequence="0"/>   
-        
+
+    <menuitem id="menu_appointment_master"
+        name="Appointments"
+        parent="menu_hospital_root"
+        sequence="20"/> 
+           
 </odoo>
