[MV2-187] Set Default Values For Fields

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -21,8 +21,10 @@
                 <sheet>
                     <group>
                         <field name="patient_id"/>
-                        <field name="appointment_time"/>
                         <field name="booking_date"/>
+                    </group>
+                    <group>
+                        <field name="appointment_time"/>
                     </group>
                 </sheet>
                 <div class="oe_chatter">
