--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -21,6 +21,7 @@
                 <sheet>
                     <group>
                         <field name="patient_id"/>
+                        <field name="gender"/>
                         <field name="booking_date"/>
                     </group>
                     <group>
