[MV2-223] Add Notebook And Pages

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -20,14 +20,27 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="patient_id"/>
-                        <field name="ref"/>
-                        <field name="gender"/>
-                        <field name="booking_date"/>
+                        <group>
+                            <field name="patient_id"/>
+                            <field name="ref"/>
+                        </group>
+                        <group>
+                            <field name="appointment_time"/>
+                        </group>
                     </group>
-                    <group>
-                        <field name="appointment_time"/>
-                    </group>
+
+                    <notebook>
+                        <page string="Prescription" name="prescription"> 
+                            <group>
+                                <field name="gender"/>
+                            </group>
+                        </page>
+                        <page string="Pharmacy" name="pharmacy">
+                            <group>
+                                <field name="booking_date"/>
+                            </group>
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" groups="base.group_user"/>
