--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -5,7 +5,7 @@
         <field name="name">hospital.appointment.view.tree</field>
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
-            <tree create="0" delete="0">
+            <tree>
                 <field name="patient_id"/>
                 <field name="appointment_time"/>
                 <field name="booking_date"/>
@@ -17,8 +17,13 @@
         <field name="name">hospital.appointment.view.form</field>
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
-            <form create="0" delete="0" edit="0">
+            <form>
                 <sheet>
+                    <div class="oe_title">
+                        <h2>
+                            <field name="priority" widget="priority" class="mr-3"/>
+                        </h2>
+                    </div>
                     <group>
                         <group>
                             <field name="patient_id"/>
