--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -33,14 +33,16 @@
                             <field name="patient_id"/>
                             <field name="ref"/>
                             <field name="gender"/>
-                            <field name="booking_date"/>
+                            <field name="booking_date" help="Date of booking"/>
                         </group>
                         <group>
                             <field name="appointment_time"/>
                             <button name="action_test" string="Object Button" type="object" 
+                                    help="A message will be printed in the log"
                                     confirm="Are you sure to execute python code ?"
                                     class="oe_highlight"/>
                             <button name="%(om_hospital.action_hospital_patient)d" string="Action Button" 
+                                    help="On clicking this button, you will be redirected to patients records"
                                     confirm="Are you sure to open the patient action ?"
                                     type="action" class="oe_highlight"/>
                         </group>
