[MV2-235] Add Widget List Activity

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -10,6 +10,7 @@
                 <field name="patient_id"/>
                 <field name="appointment_time"/>
                 <field name="booking_date"/>
+                <field name="activity_ids" widget="list_activity"/>
                 <field name="state" 
                     decoration-success="state == 'done'" 
                     decoration-info="state == 'draft'"
@@ -65,8 +66,8 @@
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" groups="base.group_user"/>
-                    <field name="activity_ids" />
-                    <field name="message_ids" />
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
                 </div>
             </form>
         </field>
