--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -9,6 +9,7 @@
                 decoration-warning="state == 'in_consultation'" decoration-info="state == 'draft'">
                 <field name="patient_id"/>
                 <field name="ref" optional="show"/>
+                <field name="doctor_id" widget="many2one_avatar_user"/>
                 <field name="gender" optional="hide"/>
                 <field name="appointment_time"/>
                 <field name="booking_date" optional="show"/>
@@ -43,6 +44,7 @@
                             <field name="patient_id"/>
                             <field name="ref"/>
                             <field name="gender"/>
+                            <field name="doctor_id" widget="many2one_avatar_user"/>
                             <field name="booking_date" help="Date of booking"/>
                         </group>
                         <group>
@@ -60,7 +62,8 @@
 
                     <notebook>
                         <page string="Prescription" name="prescription"> 
-                            <field name="prescription" placeholder="Emter your prescription"/>
+                            <field name="prescription" placeholder="Emter your prescription"
+                            options="{'collaborative': True}"/>
                         </page>
                         <page string="Pharmacy" name="pharmacy">
                         </page>
