[MV2-251] Show Simple Data

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -6,7 +6,7 @@
         <field name="model">hospital.appointment</field>
         <field name="arch" type="xml">
             <tree decoration-success="state == 'done'" decoration-danger="state == 'cancel'" 
-                decoration-warning="state == 'in_consultation'" decoration-info="state == 'draft'">
+                decoration-warning="state == 'in_consultation'" decoration-info="state == 'draft'" sample="1">
                 <field name="patient_id"/>
                 <field name="ref" optional="show"/>
                 <field name="doctor_id" widget="many2one_avatar_user"/>
