[MV2-254] Enable Button Shortcuts

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -31,12 +31,17 @@
             <form>
                 <header>
                     <button name="action_in_consultation" string="In Consulttation" class="oe_highlight" 
+                            data-hotkey="x"
                             type="object" states="draft"/>
-                    <button name="action_done" string="Mark As Done" type="object" class="oe_highlight" 
-                            states="in_consultation"/>
-                    <button name="action_cancel" string="Cancel" 
+                    <button name="action_done" string="Mark As Done" class="oe_highlight" 
+                            data-hotkey="v"
+                            type="object" states="in_consultation"/>
+                    <button name="action_cancel" string="Cancel"
+                            data-hotkey="z" 
                             type="object" states="draft,in_consultation"/>
-                    <button name="action_draft" string="Reset To Draft" type="object" states="cancel"/>
+                    <button name="action_draft" string="Reset To Draft"
+                            data-hotkey="r" 
+                            type="object" states="cancel"/>
                         <!-- options="{'clickable': '1'} -->
                     <field name="state" widget="statusbar" nolabel="1" 
                            statusbar_visible="draft,in_consultation,done"/>
