--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -80,7 +80,7 @@
                         </page>
                         <page string="Pharmacy" name="pharmacy">
                             <field name="pharmacy_line_ids">
-                                <tree editable="bottom">
+                                <tree editable="top">
                                     <field name="product_id" />
                                     <field name="price_unit" />
                                     <field name="qty" />
