--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -61,14 +61,16 @@
                             <field name="booking_date" help="Date of booking" default_focus="1"/>
                         </group>
                         <group>
-                            <field name="hide_sales_price"/>
+                            <field name="hide_sales_price" groups="base.group_no_one"/>
                             <field name="appointment_time"/>
                             <button name="action_test" string="Object Button" type="object" 
                                     help="A message will be printed in the log"
+                                    groups="base.group_no_one"
                                     confirm="Are you sure to execute python code ?"
                                     class="oe_highlight"/>
                             <button name="%(om_hospital.action_hospital_patient)d" string="Action Button" 
                                     help="On clicking this button, you will be redirected to patients records"
+                                    groups="base.group_no_one"
                                     confirm="Are you sure to open the patient action ?"
                                     type="action" class="oe_highlight"/>
                         </group>
