[MV2-271] Add Widget Boolean Toggle

--- a/om_hospital/views/menu.xml
+++ b/om_hospital/views/menu.xml
@@ -15,5 +15,11 @@
         name="Appointments"
         parent="menu_hospital_root"
         sequence="20"/> 
-           
+
+    <menuitem
+        id="menu_configuration"
+        name="Configuration"
+        parent="menu_hospital_root"
+        sequence="10"/>
+
 </odoo>
