--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -61,7 +61,7 @@
                             <field name="booking_date" help="Date of booking" default_focus="1"/>
                         </group>
                         <group>
-                            <field name="hide_sales_price" groups="base.group_no_one"/>
+                            <field name="hide_sales_price" attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}" />
                             <field name="appointment_time"/>
                             <button name="action_test" string="Object Button" type="object" 
                                     help="A message will be printed in the log"
@@ -84,10 +84,9 @@
                         <page string="Pharmacy" name="pharmacy">
                             <field name="pharmacy_line_ids">
                                 <tree editable="top">
-                                    <field name="product_id" />
-                                    <field name="price_unit" 
-                                    attrs="{'column_invisible': [('parent.hide_sales_price', '=', True)]}"/>
-                                    <field name="qty" />
+                                    <field name="product_id"/>
+                                    <field name="price_unit" attrs="{'invisible': [('parent.hide_sales_price', '=', True)]}"/>
+                                    <field name="qty"/>
                                 </tree>
                                 <form>
                                     <group>
