[MV2-289] Create And Launch Wizard

--- a/om_hospital/views/menu.xml
+++ b/om_hospital/views/menu.xml
@@ -20,6 +20,13 @@
         id="menu_configuration"
         name="Configuration"
         parent="menu_hospital_root"
-        sequence="10"/>
+        sequence="100"/>
+
+    <menuitem
+        id="menu_cancel_appointment"
+        name="Cancelation"
+        parent="menu_appointment_master"
+        action="action_cancel_appointment"
+        sequence="20"/>
 
 </odoo>
