--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -135,12 +135,18 @@
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">hospital.appointment</field>
         <field name="view_mode">tree,form,activity</field>
+        <field name="context">{}</field>
+        <field name="help" type="html">
+            <p class="o_view_nocontent_smiling_face">
+                Create your first appointment !
+            </p>
+        </field>        
     </record>
 
      <menuitem id="menu_appointment"
               name="Appointments"
               action="action_hospital_appointment"
-              parent="menu_hospital_root"
+              parent="menu_appointment_master"
               sequence="10"/>
 
 </odoo>
