[MV2-291] Add Launch Wizard From Button

--- a/om_hospital/views/appointment_view.xml
+++ b/om_hospital/views/appointment_view.xml
@@ -57,9 +57,15 @@
                     <button name="action_done" string="Mark As Done" class="oe_highlight" 
                             data-hotkey="v"
                             type="object" states="in_consultation"/>
+                    
+                    <!-- <button name="%(om_hospital.action_cancel_appointment)d" string="Cancel"
+                            data-hotkey="z" 
+                            type="action" states="draft,in_consultation"/> -->
+                    
                     <button name="action_cancel" string="Cancel"
                             data-hotkey="z" 
                             type="object" states="draft,in_consultation"/>
+                    
                     <button name="action_draft" string="Reset To Draft"
                             data-hotkey="r" 
                             type="object" states="cancel"/>
